gtest/GTestWrapper.java failed os.test_random

XMLWordPrintable

    • b27
    • x86_64, aarch64
    • linux

      The following test failed in the JDK16 CI:

      gtest/GTestWrapper.java

      Here's a snippet from the log file:

      [----------] 11 tests from os
      [ RUN ] os.page_size_for_region_vm
      [ OK ] os.page_size_for_region_vm (0 ms)
      [ RUN ] os.page_size_for_region_aligned_vm
      [ OK ] os.page_size_for_region_aligned_vm (0 ms)
      [ RUN ] os.page_size_for_region_alignment_vm
      [ OK ] os.page_size_for_region_alignment_vm (0 ms)
      [ RUN ] os.page_size_for_region_unaligned_vm
      [ OK ] os.page_size_for_region_unaligned_vm (0 ms)
      [ RUN ] os.test_random
      /opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S103/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/a771f71b-fe39-4079-a04b-b91e83b3cffe/runs/f418d221-5388-4ed7-9121-c986a94b04ae/workspace/open/test/hotspot/gtest/runtime/test_os.cpp:134: Failure
      Expected equality of these values:
        num
          Which is: 1589873406
        1043618065
      bad seed
      [ FAILED ] os.test_random (0 ms)
      [ RUN ] os.page_size_for_region_with_zero_min_pages_vm_assert
      [ OK ] os.page_size_for_region_with_zero_min_pages_vm_assert (269 ms)
      [ RUN ] os.test_print_hex_dump_vm
      [ OK ] os.test_print_hex_dump_vm (6 ms)
      [ RUN ] os.vsnprintf_vm
      [ OK ] os.vsnprintf_vm (0 ms)
      [ RUN ] os.snprintf_vm
      [ OK ] os.snprintf_vm (0 ms)
      [ RUN ] os.jio_vsnprintf_vm
      [ OK ] os.jio_vsnprintf_vm (0 ms)
      [ RUN ] os.jio_snprintf_vm
      [ OK ] os.jio_snprintf_vm (0 ms)
      [----------] 11 tests from os (275 ms total)

            Assignee:
            Coleen Phillimore
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: