8254042: gtest/GTestWrapper.java failed os.test_random